# shanghaitech

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
arts1422/: .gitignore  README.md  docker-compose.yml
benches/: CMakeLists.txt
benches/src/: tmp_bench.cu
cs120/scripts/rateway/part10/: ch1.ps1
cs121/: .clang-format  .gitignore  CMakeLists.txt  README.md
cs121/include/cuckoohash/: builtin.hpp  cuckoohash.cuh  set.cuh
cs121/tests/: CMakeLists.txt
cs121/tests/include/: benchmark.cuh  random.cuh
cs121/tests/src/: bound_test.cu  harness_test.cu  insert_test.cu  lookup_test.cu  size_test.cu
include/cuckoohash/: builtin.hpp  cuckoohash.cuh  hash.cuh  set.cuh  slot.cuh  tmp.cuh
si100b/: Dockerfile  LICENSE  docker-compose.yaml  requirements.txt
si100b/src/: db.sqlite3
si100b/src/content/: logs.txt  views.py
si100b/src/content/generators/: controller.py  county_draw.py  county_statics.py  d14_statics.py  d30_statics.py  general_statics.py  predic_statics.py  state.py  state_draw.py  state_statics.py
si100b/src/content/templates/: county.html  county_ins_19-65.csv  county_ins_19.csv  county_pop.csv  county_pop_age.csv  county_pop_anc.csv  county_pop_race.csv  county_pov.csv  county_vac.csv  error.html  index.html  infect map county case.html  infect map county death rate.html  infect map county death.html  infect map county new case.html  infect map state case.html  infect map state death rate.html  infect map state new case.html  infect map state vac total.html  state_ins_65.csv  state_pop.csv  state_pop_age.csv  state_pop_anc.csv  state_pop_race.csv  state_pov.csv  state_vac.csv  statics.json
si100b/src/covid_dashboard/: asgi.py  urls.py  wsgi.py
si100b/static/: raw_data.txt
src/: tmp.cu
src/content/generators/: county.py  d90_statics.py
src/content/templates/: county_ins_65.csv  infect map county vac rate.html  infect map county vac total.html  infect map state death.html  state.html  state_ins_19-65.csv  state_ins_19.csv
src/covid_dashboard/: settings.py
tests/: CMakeLists.txt
tests/include/: benchmark.cuh  random.cuh
tests/src/: harness_test.cu  insert_test.cu  tmp_test.cu
tests/src/harness/: set_test.cu
